<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent" android:layout_gravity="center">


    <TextView
        android:id="@+id/poppy_speak_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Appuyer sur calculer pour faire dire le calcul à Poppy"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <TextView
                android:id="@+id/poppy_speak_result_text"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_span="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/poppy_speak_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_one_string" />

            <Button
                android:id="@+id/poppy_speak_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_two_string" />

            <Button
                android:id="@+id/poppy_speak_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_three_string" />

            <Button
                android:id="@+id/poppy_speak_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_plus_string" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/poppy_speak_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculator_four_string" />

            <Button
                android:id="@+id/poppy_speak_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_five_string" />

            <Button
                android:id="@+id/poppy_speak_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_six_string" />

            <Button
                android:id="@+id/poppy_speak_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_minus_string" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/poppy_speak_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_seven_string" />

            <Button
                android:id="@+id/poppy_speak_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_eight_string" />

            <Button
                android:id="@+id/poppy_speak_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_nine_string" />

            <Button
                android:id="@+id/poppy_speak_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_mult_string" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/poppy_speak_zero"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/calculator_zero_string" />

            <Button
                android:id="@+id/poppy_speak_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_div_string" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/poppy_speak_result_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/calculator_compute_string" />

            <Button
                android:id="@+id/poppy_speak_erase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/calculator_erase_string" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>